Se agregaron los estilos y modificaron las rutas

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Jesus Ulloa Barrientos">
     <title>Hotel gato lunar</title>
     <link rel="icon" href="Imagenes/IconoPrin.png" />
-    <link rel="stylesheet" type="text/css" href="Estilos/index.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <style>
         header {
             background-image: url("Imagenes/fondoHeader.jpg");
